# napi_ext

./: .gitignore  Cargo.toml  README.md  justfile  package.json  rustfmt.toml
cmd/: example-a.js  example-b.js  example-c.js  example-d.js  package.json
examples/addon/: Cargo.toml  package.json
examples/addon/nodejs/: index.cjs
examples/addon/src/: benchmark_a.rs  lib.rs
examples/nodejs/: benchmarks.js  example-a.js  example-b.js  example-c.js  example-d.js  example-e.js  package.json
napi_async_local/: Cargo.toml  README.md
napi_async_local/macros/: Cargo.toml
napi_async_local/macros/src/: lib.rs
napi_async_local/src/: lib.rs  prelude.rs  spawn_local.rs  utils.rs
napi_async_local/src/async_local/: mod.rs
napi_async_local/src/async_local/executor/: enter.rs  local_pool.rs
napi_async_local/src/js_rc/: js_rc.rs  mod.rs  root.rs  store.rs
napi_async_local/src/root/: js_rc.rs  js_rc_ext.rs  mod.rs  store.rs
napi_async_local/src/runtime/: waker.rs
napi_async_local/src/spawn_local/: spawn_local.rs  spawn_local_ext.rs
napi_async_local/src/utils/: console_log.rs  create_promise.rs  js_fn.rs  mod.rs  utils_ext.rs
napi_example/: Cargo.toml  package.json
napi_example/src/: lib.rs
napi_ext/: Cargo.toml  README.md
napi_ext/macros/: Cargo.toml
napi_ext/macros/src/: lib.rs
napi_ext/src/: lib.rs
napi_ext/src/internal/: mod.rs
napi_ext/src/js_rc/: js_rc.rs  js_rc_ext.rs  mod.rs  root.rs  store.rs
napi_ext/src/runtime/: mod.rs
napi_ext/src/runtime/executor/: enter.rs
napi_ext/src/runtime2/: runtime.rs
napi_ext/src/spawn_local/: spawn_local.rs  spawn_local_ext.rs
napi_ext/src/utils/: console_log.rs  create_promise.rs  js_promise.rs  mod.rs  spawn_thread.rs  utils_ext.rs
