[package]
name = "napi_async_local"
authors = ["David Alsh"]
homepage = "https://github.com/alshdavid/napi_async_local"
version = "0.1.1"
edition = "2021"
metadata = {  }
description = "Extends napi-rs with the ability to run local futures"
license = "MIT"

[dependencies]
napi = { version = "2", features = ["napi5"]}
once_cell = "1"
futures = "0.3"
