[package]
name = "napi_ext"
authors = ["David Alsh"]
homepage = "https://github.com/alshdavid/napi_async_local"
version = "0.3.0"
edition = "2021"
metadata = {  }
description = "Extends napi-rs with the ability to run local futures"
license = "MIT"

[dependencies]
napi_ext_macros = { path = "./macros", version = "0.3" }
napi = { version = "2", features = ["napi5"]}
once_cell = "1"
futures = "0.3"
