[package]
name = "napi_sandbox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "*", default-features = false, features = ["napi8"] }
napi-derive = "*"
napi_async_local = { path = "../../napi_async_local" }
once_cell = "*"
futures = "*"
async-std = "*"

[build-dependencies]
napi-build = "2.*"
