[package]
name = "napi_sandbox"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "*", default-features = false, features = ["napi8"] }
napi-derive = "*"
napi_ext = { path = "../../napi_ext" }
once_cell = "*"
futures = "*"
async-std = "*"
kanal = "0.1"

[build-dependencies]
napi-build = "2.*"
