[package]
name = "napi_async_local_macros"
authors = ["David Alsh"]
homepage = "https://github.com/alshdavid/napi_async_local"
version = "0.2.0"
edition = "2021"
metadata = {  }
description = "Extends napi-rs with the ability to run local futures"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"