[package]
name = "napi_ext_macros"
authors = ["David Alsh"]
homepage = "https://github.com/alshdavid/napi_ext"
version = "0.3.0"
edition = "2021"
metadata = {  }
description = "Extends napi-rs with the ability to run local futures"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"]}
quote = "1"
proc-macro2 = "1"